Arreglo de errores react

--- a/public/admin.html
+++ b/public/admin.html
@@ -6,7 +6,8 @@
     <title>Administrador - TechStore</title>
     <link rel="shortcut icon" href="https://previews.123rf.com/images/sommersby/sommersby1510/sommersby151000546/46335210-white-flat-shopping-cart-icon-on-a-green-background-vector-illustration.jpg">
     
-    <link rel="stylesheet" href="stylesa.css">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
     <style>
         /* Estilos adicionales para mejorar la apariencia */
         .admin-user {
