--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
     <link rel="shortcut icon" href="https://previews.123rf.com/images/sommersby/sommersby1510/sommersby151000546/46335210-white-flat-shopping-cart-icon-on-a-green-background-vector-illustration.jpg">
 </head>
 <body>
+    <div id="root"></div>
+
     <!-- Encabezado y Navegación -->
     <header>
         <div class="container">
@@ -29,7 +31,7 @@
                     <li><a href="#" class="nav-link" onclick="showPage('contacto')"><i class="fas fa-phone"></i> Contacto</a></li>
                     <li><a href="#" class="nav-link" onclick="showPage('registro')"><i class="fas fa-user-plus"></i> Registro</a></li>
                     <li><a href="#" class="nav-link" onclick="showPage('login')"><i class="fas fa-sign-in-alt"></i> Login</a></li>
-                    <li><a href="../admin.html" class="nav-link" target="_blank"><i class="fas fa-cog"></i> Admin</a></li>
+                    <li><a href="#" class="nav-link" target="_blank"><i class="fas fa-cog"></i> Admin</a></li>
                     <li><a href="#" class="nav-link" id="cart-btn"><i class="fas fa-shopping-cart"></i> Carrito (<span id="cart-count">0</span>)</a></li>
                 </ul>
             </nav>
